--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 Title: Chinonso Okafor
-#logo:/assets/img/headshot_circle.png
+logo: /Chinonso Okafor.png
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
