--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 Title: Chinonso Okafor
-logo: /Chinonso Okafor.png
+logo: /Chinonso.png
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
